# fbjni

./: .gitignore  CMakeLists.txt  build.gradle  gradle.properties  host.gradle  settings.gradle
.github/workflows/: android.yml  release.yml  tests.yml
cxx/fbjni/: Application.h  ByteBuffer.cpp  ByteBuffer.h  ClassLoader.h  Context.h  File.h  IBinder.h  JThread.h  NativeRunnable.h  OnLoad.cpp  Parcel.h  ReadableByteChannel.cpp  ReadableByteChannel.h  fbjni.cpp  fbjni.h
cxx/fbjni/detail/: Boxed.h  Common.h  CoreClasses-inl.h  CoreClasses.h  Environment.cpp  Environment.h  Exceptions.cpp  Exceptions.h  FbjniApi.h  Hybrid.cpp  Hybrid.h  Iterator-inl.h  Iterator.h  JWeakReference.h  Log.h  Meta-forward.h  Meta-inl.h  Meta.cpp  Meta.h  MetaConvert.h  ReferenceAllocators-inl.h  ReferenceAllocators.h  References-forward.h  References-inl.h  References.cpp  References.h  Registration-inl.h  Registration.h  SimpleFixedString.h  TypeTraits.h  utf8.cpp  utf8.h
cxx/lyra/: cxa_throw.cpp  lyra.cpp  lyra.h  lyra_breakpad.cpp  lyra_exceptions.cpp  lyra_exceptions.h
docs/: android_setup.md  build_quickref.py  maintainers.md  quickref.md
fbjni-android/: build.gradle
fbjni-java-only/: build.gradle
gradle/: android-tasks.gradle
java/com/facebook/jni/: DestructorThread.java  ExceptionHelper.java  FbjniExceptionConfig.java  HybridData.java
java/com/facebook/jni/annotations/: DoNotStripAny.java
scripts/: android-setup.sh  run-host-tests.sh
test/: BaseFBJniTests.java  ByteBufferTests.java  DocTests.java  FBJniTests.java  HybridTests.java  IteratorTests.java  PrimitiveArrayTests.java  ReadableByteChannelTests.java
test/jni/: CMakeLists.txt  byte_buffer_tests.cpp  doc_tests.cpp  expect.h  fbjni_onload.cpp  fbjni_tests.cpp  hybrid_tests.cpp  iterator_tests.cpp  modified_utf8_test.cpp  no_rtti.cpp  primitive_array_tests.cpp  readable_byte_channel_tests.cpp  simple_fixed_string_tests.cpp  utf16toUTF8_test.cpp
test/jni/inter_dso_exception_test_2/: Test.cpp
